--- a/style.css
+++ b/style.css
@@ -5,13 +5,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-}
+  justify-content: space-around; }
 
 body {
   background-color: #333333;
-  color: #ffffff;
-}
+  color: #ffffff; }
 
 #devRes,
 #devPow,
@@ -23,80 +21,65 @@ body {
   border: 1px solid black;
   padding: 5px;
   color: gray;
-  text-align: center;
-}
-#devRes:empty:before,
-#devPow:empty:before,
-#devVip:empty:before {
-  content: attr(data-placeholder);
-  color: gray;
-}
+  text-align: center; }
+  #devRes:empty:before,
+  #devPow:empty:before,
+  #devVip:empty:before {
+    content: attr(data-placeholder);
+    color: gray; }
 
 #devModeTools {
   margin-top: 10px;
-  margin-bottom: -10px;
-}
+  margin-bottom: -10px; }
 
 /* NORMAL STUFF */
+#autoGathererCounter,
+#optimizationsCounter,
 #highEfficiencyGathererCounter {
   padding-top: 0.5em;
-}
-
-#autoGathererCounter,
-#optimizationsCounter {
-  padding-top: 0.5em;
-}
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 1em;
+  font-weight: bolder; }
 
 #game-container {
   width: 1000px;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 #gameTitle {
-  font-size: 3em;
-}
+  font-size: 3em; }
 
 #resourceBar {
   display: flex;
-  justify-content: space-between;
-}
+  justify-content: space-between; }
 
 #resourceCounter {
-  font-size: 1.5em;
-}
+  font-size: 1.5em; }
 
 #resPerSec {
   font-size: 1.5em;
-  margin-left: auto;
-}
+  margin-left: auto; }
 
 #processingPowerBar {
   display: flex;
-  justify-content: space-between;
-}
+  justify-content: space-between; }
 
 #processingPowerCounter {
-  font-size: 1.5em;
-}
+  font-size: 1.5em; }
 
 #processingPowerPerSec {
   font-size: 1.5em;
-  margin-left: auto;
-}
+  margin-left: auto; }
 
 #viperCoinBar {
   display: flex;
-  justify-content: space-between;
-}
+  justify-content: space-between; }
 
 #viperCoinCounter {
-  font-size: 1.5em;
-}
+  font-size: 1.5em; }
 
 #viperCoinPerSec {
   font-size: 1.5em;
-  margin-left: auto;
-}
+  margin-left: auto; }
 
 #researchLab {
   margin-top: 20px;
@@ -105,8 +88,7 @@ body {
   border-radius: 10px;
   display: flex;
   flex-direction: grid;
-  align-items: flex-start;
-}
+  align-items: flex-start; }
 
 #researchLab h3 {
   margin-top: 0;
@@ -118,17 +100,14 @@ body {
   font-size: 1.8em;
   text-align: center;
   box-shadow: 0 4px 8px rgba(26, 188, 156, 0.3);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-#researchLab h3:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(26, 188, 156, 0.4);
-}
+  transition: transform 0.3s ease, box-shadow 0.3s ease; }
+  #researchLab h3:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(26, 188, 156, 0.4); }
 
 #researchLab .button-upgrades {
   width: 80%;
-  margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
 
 #quantumComputingCenter {
   margin-top: 20px;
@@ -137,8 +116,7 @@ body {
   border-radius: 10px;
   display: flex;
   flex-direction: grid;
-  align-items: flex-start;
-}
+  align-items: flex-start; }
 
 #quantumComputingCenter h3 {
   margin-top: 0;
@@ -150,32 +128,27 @@ body {
   font-size: 1.8em;
   text-align: center;
   box-shadow: 0 4px 8px rgba(155, 89, 182, 0.3);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-#quantumComputingCenter h3:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(155, 89, 182, 0.4);
-}
+  transition: transform 0.3s ease, box-shadow 0.3s ease; }
+  #quantumComputingCenter h3:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(155, 89, 182, 0.4); }
 
 #quantumComputingCenter .button-upgrades {
   width: 80%;
-  margin-bottom: 10px;
-}
+  margin-bottom: 10px; }
 
 .crt-container {
   display: flex;
   align-items: center;
-  justify-content: center;
-}
+  justify-content: center; }
 
 .stage {
-  display: none;
-}
-.stage.active {
-  display: block;
-}
+  display: none; }
+  .stage.active {
+    display: block; }
 
-.button-gather-res {
+.button-gather-res,
+#music-toggle-button {
   background-color: #fff;
   border: 2px solid #000;
   border-radius: 30px;
@@ -186,14 +159,13 @@ body {
   font-weight: 600;
   font-size: 18px;
   margin-right: 20px;
-  padding: 0 18px;
+  padding: 0 18pxw;
   line-height: 30px;
   text-align: center;
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation;
-}
+  touch-action: manipulation; }
 
 .button-upgrades {
   background-color: #00ff00;
@@ -211,50 +183,55 @@ body {
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation;
-}
+  touch-action: manipulation; }
 
 .button-gather-res:active,
-.button-upgrades:active {
+.button-upgrades:active,
+#music-toggle-button:active {
   box-shadow: #000 2px 2px 0 0;
-  transform: translate(2px, 2px);
-}
+  transform: translate(2px, 2px); }
 
 @media (min-width: 768px) {
   .button-gather-res,
-  .button-upgrades {
+  .button-upgrades,
+  #music-toggle-button {
     min-width: 120px;
-    padding: 0 15px;
-  }
-}
+    padding: 0 15px; } }
 .crypto-icon {
   width: 32px;
   height: 32px;
   background-image: url("images/vipercoin-icon.svg");
   background-size: cover;
-  background-repeat: no-repeat;
-}
+  background-repeat: no-repeat; }
+
+.centered-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px; }
 
 .flex-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-}
+  justify-content: space-between; }
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  width: fit-content; }
 
 .left-group {
   display: flex;
   flex-direction: column;
   width: 50%;
   align-items: flex-start;
-  justify-content: flex-end;
-}
+  justify-content: flex-end; }
 
 .right-group {
   display: flex;
   width: 50%;
   align-items: flex-start;
-  justify-content: flex-end;
-}
+  justify-content: flex-end; }
 
 .major-upgrades {
   height: 100%;
@@ -262,15 +239,14 @@ body {
   padding: 0.6em 2em;
   border: none;
   outline: none;
-  color: rgb(255, 255, 255);
+  color: white;
   cursor: pointer;
   position: relative;
   z-index: 0;
   border-radius: 10px;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation;
-}
+  touch-action: manipulation; }
 
 .major-upgrades:before {
   content: "";
@@ -286,20 +262,15 @@ body {
   height: calc(100% + 4px);
   animation: glowing-button 20s linear infinite;
   transition: opacity 0.3s ease-in-out;
-  border-radius: 10px;
-}
+  border-radius: 10px; }
 
 @keyframes glowing-button {
   0% {
-    background-position: 0 0;
-  }
+    background-position: 0 0; }
   50% {
-    background-position: 400% 0;
-  }
+    background-position: 400% 0; }
   100% {
-    background-position: 0 0;
-  }
-}
+    background-position: 0 0; } }
 .major-upgrades:after {
   z-index: -1;
   content: "";
@@ -311,39 +282,30 @@ body {
   left: 0;
   top: 0;
   border-radius: 10px;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 :root {
   --glitch-duration: 5s;
-  /* Default duration */
-}
+  /* Default duration */ }
 
 .glitch {
-  animation: glitch-effect var(--glitch-duration) infinite;
-}
+  animation: glitch-effect var(--glitch-duration) infinite; }
 
 @keyframes glitch-effect {
   0% {
-    opacity: 1;
-  }
+    opacity: 1; }
   25% {
     opacity: 0.25;
-    transform: translate(-2px, 2px);
-  }
+    transform: translate(-2px, 2px); }
   50% {
     opacity: 1;
-    transform: translate(2px, -2px);
-  }
+    transform: translate(2px, -2px); }
   75% {
     opacity: 0.25;
-    transform: translate(-2px, 2px);
-  }
+    transform: translate(-2px, 2px); }
   100% {
     opacity: 1;
-    transform: translate(0);
-  }
-}
+    transform: translate(0); } }
 .progress-bar {
   width: 100%;
   height: 15px;
@@ -351,8 +313,7 @@ body {
   border-radius: 10px;
   overflow: hidden;
   margin-top: 5px;
-  position: relative;
-}
+  position: relative; }
 
 .progress-fill {
   height: 100%;
@@ -361,19 +322,17 @@ body {
   width: 0;
   /* Initial width */
   transition: width 0.3s ease;
-  /* Smooth transition effect */
-}
+  /* Smooth transition effect */ }
 
 .level-display {
+  font-family: 'Courier New', Courier, monospace;
   font-size: 1.5em;
   color: goldenrod;
-  margin-left: 10px;
-}
+  margin-left: 10px; }
 
 /* TOOLTIP STUFF */
 .info-button {
-  position: relative;
-}
+  position: relative; }
 
 .info-button::after {
   content: attr(data-tooltip);
@@ -388,16 +347,16 @@ body {
   border-radius: 4px;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.2s ease-in-out;
-}
+  transition: opacity 0.2s ease-in-out; }
 
 .info-button:hover::after {
-  opacity: 1;
-}
+  opacity: 1; }
 
 .info-button.tooltip-visible::after {
-  opacity: 0;
-}
+  opacity: 0; }
+
+.toggle-title {
+  font-size: 1.5em; }
 
 /* HAMBURGER MENU STUFF */
 /* The Overlay (background) */
@@ -411,15 +370,14 @@ body {
   /* Sit on top */
   left: 0;
   top: 0;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   /* Black fallback color */
   background-color: rgba(0, 0, 0, 0.9);
   /* Black w/opacity */
   overflow-x: hidden;
   /* Disable horizontal scroll */
   transition: 0.5s;
-  /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
-}
+  /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */ }
 
 /* Position the content inside the overlay */
 .overlay-content {
@@ -434,13 +392,11 @@ body {
   margin-top: 30px;
   /* 30px top margin to avoid conflict with the close button on smaller screens */
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
 
 .overlay-content span {
   font-size: 34px;
-  padding-right: 10px;
-}
+  padding-right: 10px; }
 
 /* The navigation links inside the overlay */
 .overlay a {
@@ -451,14 +407,12 @@ body {
   display: block;
   /* Display block instead of inline */
   transition: 0.3s;
-  /* Transition effects on hover (color) */
-}
+  /* Transition effects on hover (color) */ }
 
 /* When you mouse over the navigation links, change their color */
 .overlay a:hover,
 .overlay a:focus {
-  color: #f1f1f1;
-}
+  color: #f1f1f1; }
 
 /* Position the close button (top right corner) */
 .overlay .closebtn {
@@ -466,28 +420,24 @@ body {
   top: 20px;
   right: 45px;
   font-size: 60px;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
   .overlay a {
-    font-size: 20px;
-  }
+    font-size: 20px; }
+
   .overlay .closebtn {
     font-size: 40px;
     top: 15px;
-    right: 35px;
-  }
-}
+    right: 35px; } }
 .hamburger {
   display: inline-block;
   width: 40px;
   height: 30px;
   position: relative;
   cursor: pointer;
-  margin-top: 40px;
-}
+  margin-top: 40px; }
 
 .hamburger::before,
 .hamburger::after,
@@ -499,37 +449,31 @@ body {
   width: 100%;
   position: absolute;
   left: 0;
-  transition: transform 0.3s ease;
-}
+  transition: transform 0.3s ease; }
 
 .hamburger::before {
-  top: 0;
-}
+  top: 0; }
 
 .hamburger::after {
-  bottom: 0;
-}
+  bottom: 0; }
 
 .hamburger span {
   top: 50%;
-  transform: translateY(-50%);
-}
+  transform: translateY(-50%); }
 
 /* TOGGLE SWITCH STUFF */
 /* The switch - the box around the slider */
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
-}
+  width: 30px;
+  height: 17px; }
 
 /* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
   width: 0;
-  height: 0;
-}
+  height: 0; }
 
 /* The slider */
 .slider {
@@ -541,43 +485,91 @@ body {
   bottom: 0;
   background-color: #ccc;
   -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
+  transition: 0.4s; }
 
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
   background-color: white;
   -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
+  transition: 0.4s; }
 
 input:checked + .slider {
-  background-color: #2196f3;
-}
+  background-color: #2196f3; }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196f3;
-}
+  box-shadow: 0 0 1px #2196f3; }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px); }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 34px;
-}
+  border-radius: 17px; }
 
 .slider.round:before {
-  border-radius: 50%;
-}
+  border-radius: 50%; }
+
+/* Music Player Styling */
+.music-player-container {
+  background: linear-gradient(135deg, #0E0B16, #6A0572, #A10D7B, #FF2E63, #ffaaaa);
+  border: 2px solid #193153;
+  border-radius: 15px;
+  margin-top: 120px;
+  padding: 20px 30px;
+  box-shadow: 0 0 20px #e445e9;
+  font-size: 1.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 25%; }
+
+/* Volume Slider Styling */
+#volume-slider {
+  width: 150px;
+  margin-left: 10px;
+  appearance: none;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  border: #000 solid 1px;
+  border-radius: 5px;
+  background: linear-gradient(90deg, #00eeff, #3859ec, #151c2b);
+  outline: none;
+  transition: linear-gradient(90deg, #00eeff, #3859ec, #151c2b) 0.3s ease; }
+  #volume-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border: #000 solid 1px;
+    border-radius: 50%;
+    background: #780ca3;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(120, 12, 163, 0.7);
+    transition: linear-gradient(90deg, #00eeff, #3859ec, #151c2b) 0.3s ease, transform 0.2s ease; }
+    #volume-slider::-webkit-slider-thumb:hover {
+      transform: scale(1.2); }
+  #volume-slider::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #780ca3;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(120, 12, 163, 0.7);
+    transition: linear-gradient(90deg, #00eeff, #3859ec, #151c2b) 0.3s ease, transform 0.2s ease; }
+    #volume-slider::-moz-range-thumb:hover {
+      transform: scale(1.2); }
+  #volume-slider:hover::-webkit-slider-thumb, #volume-slider:hover::-moz-range-thumb {
+    transform: scale(1.2); }
+  #volume-slider:active::-webkit-slider-thumb, #volume-slider:active::-moz-range-thumb {
+    transform: scale(0.95); }
 
 /* CRT STUFF */
 /* From: https://anderse.wordpress.com/2014/04/18/css-and-javascript-retro-terminal-emulator-demo/ */
@@ -619,30 +611,27 @@ input:checked + .slider:before {
   background: #1d1d1d;
   overflow: hidden;
   font-size: 16px;
-  line-height: 1.33333;
-}
-.crt-bezel:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  background: linear-gradient(135deg, rgba(149, 149, 149, 0.5) 0%, rgba(13, 13, 13, 0.55) 19%, rgba(1, 1, 1, 0.64) 50%, rgba(10, 10, 10, 0.69) 69%, rgba(51, 51, 51, 0.73) 84%, rgba(22, 22, 22, 0.76) 93%, rgba(27, 27, 27, 0.78) 100%);
-  opacity: 0.5;
-}
-.crt-bezel:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -2;
-  background-color: #ddd;
-  opacity: 0.1;
-}
+  line-height: 1.33333; }
+  .crt-bezel:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    background: linear-gradient(135deg, rgba(149, 149, 149, 0.5) 0%, rgba(13, 13, 13, 0.55) 19%, rgba(1, 1, 1, 0.64) 50%, rgba(10, 10, 10, 0.69) 69%, rgba(51, 51, 51, 0.73) 84%, rgba(22, 22, 22, 0.76) 93%, rgba(27, 27, 27, 0.78) 100%);
+    opacity: 0.5; }
+  .crt-bezel:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -2;
+    background-color: #ddd;
+    opacity: 0.1; }
 
 .crt {
   position: relative;
@@ -653,20 +642,18 @@ input:checked + .slider:before {
   box-shadow: 0 0 1px 3px rgba(10, 10, 10, 0.7);
   background: #141414;
   overflow: hidden;
-  z-index: 0;
-}
-.crt:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  box-shadow: inset 0 0 5px 5px rgba(255, 255, 255, 0.1);
-  border-radius: 1.33333em;
-  background: radial-gradient(ellipse at center, rgba(51, 255, 51, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
-  z-index: -4;
-}
+  z-index: 0; }
+  .crt:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    box-shadow: inset 0 0 5px 5px rgba(255, 255, 255, 0.1);
+    border-radius: 1.33333em;
+    background: radial-gradient(ellipse at center, rgba(51, 255, 51, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+    z-index: -4; }
 
 .crt-scan-area {
   width: 100%;
@@ -676,13 +663,11 @@ input:checked + .slider:before {
   white-space: nowrap;
   font-family: monospace;
   color: #3f3;
-  text-shadow: 0 0 1px rgba(51, 255, 51, 0.8);
-}
-.crt-scan-area em {
-  color: #141414;
-  background-color: #3f3;
-  font-style: normal;
-}
+  text-shadow: 0 0 1px rgba(51, 255, 51, 0.8); }
+  .crt-scan-area em {
+    color: #141414;
+    background-color: #3f3;
+    font-style: normal; }
 
 .blinking-border {
   font-family: monospace;
@@ -690,19 +675,14 @@ input:checked + .slider:before {
   overflow: hidden;
   border-right: 0.15em solid #3f3;
   animation: blink 1s infinite;
-  /* Add a blinking cursor effect */
-}
+  /* Add a blinking cursor effect */ }
 
 @keyframes blink {
   0% {
-    border-color: transparent;
-  }
+    border-color: transparent; }
   50% {
-    border-color: #3f3;
-  }
+    border-color: #3f3; }
   100% {
-    border-color: transparent;
-  }
-}
+    border-color: transparent; } }
 
 /*# sourceMappingURL=style.css.map */
