--- a/style.css
+++ b/style.css
@@ -356,7 +356,10 @@ body {
   opacity: 0; }
 
 .toggle-title {
-  font-size: 1.5em; }
+  font-size: 3em; }
+
+.spacer {
+  width: 20px; }
 
 /* HAMBURGER MENU STUFF */
 /* The Overlay (background) */
@@ -466,8 +469,8 @@ body {
 .switch {
   position: relative;
   display: inline-block;
-  width: 30px;
-  height: 17px; }
+  width: 60px;
+  height: 34px; }
 
 /* Hide default HTML checkbox */
 .switch input {
@@ -490,10 +493,10 @@ body {
 .slider:before {
   position: absolute;
   content: "";
-  height: 13px;
-  width: 13px;
-  left: 2px;
-  bottom: 2px;
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s; }
@@ -505,13 +508,13 @@ input:focus + .slider {
   box-shadow: 0 0 1px #2196f3; }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(13px);
-  -ms-transform: translateX(13px);
-  transform: translateX(13px); }
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px); }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 17px; }
+  border-radius: 34px; }
 
 .slider.round:before {
   border-radius: 50%; }
@@ -521,7 +524,8 @@ input:checked + .slider:before {
   background: linear-gradient(135deg, #0E0B16, #6A0572, #A10D7B, #FF2E63, #ffaaaa);
   border: 2px solid #193153;
   border-radius: 15px;
-  margin-top: 120px;
+  margin-top: 60px;
+  margin-bottom: 60px;
   padding: 20px 30px;
   box-shadow: 0 0 20px #e445e9;
   font-size: 1.5em;
