--- a/style.scss
+++ b/style.scss
@@ -625,7 +625,7 @@ $quantumCenter-gradient: linear-gradient(45deg, #4b0082, #bf00ff);
 }
 
 input:checked+.slider {
-    background-color: #2196f3;
+    background: linear-gradient(90deg, #3859ec, #00eeff);
 }
 
 input:focus+.slider {
