--- a/style.scss
+++ b/style.scss
@@ -200,7 +200,9 @@ $quantumCenter-gradient: linear-gradient(45deg, #4b0082, #bf00ff);
 }
 
 .button-gather-res,
-#music-toggle-button {
+#music-toggle-button,
+#prev-track-button,
+#next-track-button {
     background-color: #fff;
     border: 2px solid #000;
     border-radius: 30px;
@@ -210,7 +212,8 @@ $quantumCenter-gradient: linear-gradient(45deg, #4b0082, #bf00ff);
     display: inline-block;
     font-weight: 600;
     font-size: 18px;
-    margin-right: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
     padding: 0 18pxw;
     line-height: 30px;
     text-align: center;
@@ -241,7 +244,9 @@ $quantumCenter-gradient: linear-gradient(45deg, #4b0082, #bf00ff);
 
 .button-gather-res:active,
 .button-upgrades:active,
-#music-toggle-button:active {
+#music-toggle-button:active,
+#prev-track-button:active,
+#next-track-button:active {
     box-shadow: #000 2px 2px 0 0;
     transform: translate(2px, 2px);
 }
@@ -460,7 +465,7 @@ $quantumCenter-gradient: linear-gradient(45deg, #4b0082, #bf00ff);
 }
 
 .toggle-title {
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 .spacer {
