--- a/style.css
+++ b/style.css
@@ -35,6 +35,40 @@ body {
   margin-bottom: -10px; }
 
 /* NORMAL STUFF */
+h1.ai-overlord-title {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 4rem;
+  color: #FF85C1;
+  text-transform: uppercase;
+  position: relative;
+  display: inline-block;
+  padding: 20px;
+  background: linear-gradient(40deg, #3A2C5A, #D700FF, #FFD700, #FF85C1, #FFD1DC);
+  background-size: 200% 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5); }
+  h1.ai-overlord-title:before {
+    content: 'AI Overlord';
+    position: absolute;
+    top: 22%;
+    left: 2%;
+    width: 100%;
+    height: 100%;
+    color: #FF85C1;
+    z-index: -1;
+    filter: blur(5px);
+    opacity: 0.6; }
+  @media (max-width: 768px) {
+    h1.ai-overlord-title {
+      font-size: 3rem;
+      padding: 15px; } }
+  @media (max-width: 480px) {
+    h1.ai-overlord-title {
+      font-size: 2.5rem;
+      padding: 10px; } }
+
 #autoGathererCounter,
 #optimizationsCounter,
 #highEfficiencyGathererCounter {
@@ -46,9 +80,6 @@ body {
 #game-container {
   width: 1000px;
   margin: 0 auto; }
-
-#gameTitle {
-  font-size: 3em; }
 
 #resourceBar {
   display: flex;
@@ -164,13 +195,20 @@ body {
   font-size: 18px;
   margin-left: 5px;
   margin-right: 5px;
-  padding: 0 18pxw;
+  padding: 0 18px;
   line-height: 30px;
   text-align: center;
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation; }
+  touch-action: manipulation;
+  transition: transform 0.2s ease, box-shadow 0.2s ease; }
+  .button-gather-res:hover,
+  #music-toggle-button:hover,
+  #prev-track-button:hover,
+  #next-track-button:hover {
+    transform: scale(1.05);
+    box-shadow: #000 4px 4px 0 0; }
 
 .button-upgrades {
   background-color: #00ff00;
@@ -188,7 +226,11 @@ body {
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation; }
+  touch-action: manipulation;
+  transition: transform 0.2s ease, box-shadow 0.2s ease; }
+  .button-upgrades:hover {
+    transform: scale(1.05);
+    box-shadow: #000 4px 4px 0 0; }
 
 .button-gather-res:active,
 .button-upgrades:active,
@@ -197,6 +239,11 @@ body {
 #next-track-button:active {
   box-shadow: #000 2px 2px 0 0;
   transform: translate(2px, 2px); }
+
+#prev-track-button img,
+#next-track-button img {
+  position: relative;
+  top: 4px; }
 
 @media (min-width: 768px) {
   .button-gather-res,
