--- a/style.css
+++ b/style.css
@@ -35,6 +35,39 @@ body {
   margin-bottom: -10px; }
 
 /* NORMAL STUFF */
+h2.stage-1-title {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 2.5em;
+  color: #FF85C1;
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  background: linear-gradient(40deg, #3A2C5A, #D700FF, #FFD700, #FF85C1, #FFD1DC);
+  background-size: 150% 150%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5); }
+  h2.stage-1-title:before {
+    content: 'Stage 1: Rise to Power';
+    position: absolute;
+    top: 22%;
+    left: 2%;
+    width: 100%;
+    height: 100%;
+    color: #FF85C1;
+    z-index: -1;
+    filter: blur(5px);
+    opacity: 0.6; }
+  @media (max-width: 768px) {
+    h2.stage-1-title {
+      font-size: 1.5rem;
+      padding: 8px; } }
+  @media (max-width: 480px) {
+    h2.stage-1-title {
+      font-size: 1rem;
+      padding: 5px; } }
+
 h1.ai-overlord-title {
   font-family: 'Courier New', Courier, monospace;
   font-size: 4rem;
@@ -42,9 +75,9 @@ h1.ai-overlord-title {
   text-transform: uppercase;
   position: relative;
   display: inline-block;
-  padding: 20px;
-  background: linear-gradient(40deg, #3A2C5A, #D700FF, #FFD700, #FF85C1, #FFD1DC);
-  background-size: 200% 200%;
+  padding: 10px;
+  background: linear-gradient(130deg, #3A2C5A, #D700FF, #FFD700, #FF85C1, #FFD1DC);
+  background-size: 150% 150%;
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -63,11 +96,11 @@ h1.ai-overlord-title {
   @media (max-width: 768px) {
     h1.ai-overlord-title {
       font-size: 3rem;
-      padding: 15px; } }
+      padding: 8px; } }
   @media (max-width: 480px) {
     h1.ai-overlord-title {
       font-size: 2.5rem;
-      padding: 10px; } }
+      padding: 5px; } }
 
 #autoGathererCounter,
 #optimizationsCounter,
@@ -91,6 +124,9 @@ h1.ai-overlord-title {
 #resPerSec {
   font-size: 1.5em;
   margin-left: auto; }
+
+#resourceIncreaseButton {
+  margin-left: 20px; }
 
 #processingPowerBar {
   display: flex;
@@ -193,8 +229,7 @@ h1.ai-overlord-title {
   display: inline-block;
   font-weight: 600;
   font-size: 18px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin: 5px;
   padding: 0 18px;
   line-height: 30px;
   text-align: center;
@@ -364,7 +399,7 @@ h1.ai-overlord-title {
   width: 100%;
   height: 15px;
   background-color: #ddd;
-  border-radius: 10px;
+  border-radius: 5px;
   overflow: hidden;
   margin-top: 5px;
   position: relative; }
@@ -381,6 +416,7 @@ h1.ai-overlord-title {
 .level-display {
   font-family: 'Courier New', Courier, monospace;
   font-size: 1.5em;
+  font-weight: bold;
   color: goldenrod;
   margin-left: 10px; }
 
