--- a/style.scss
+++ b/style.scss
@@ -59,7 +59,7 @@ h2.stage-1-title {
     position: relative;
     display: inline-block;
     padding: 10px;
-    background: linear-gradient(40deg, $dark-bg, $purple, $brown, $pink-red, $light-pink);
+    background: #74ff67;
     background-size: 150% 150%;
     background-clip: text;
     -webkit-background-clip: text;
